paragraph overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ body {
   position: relative;
 } */
 
-.countdown::before {
+.countdown-parts::before {
   background-color: var(--color-3);
   width: 1rem;
   height: 1rem;
@@ -110,7 +110,7 @@ body {
   z-index: 99;
 }
 
-.countdown::after {
+.countdown-parts::after {
   background-color: var(--color-3);
   width: 1rem;
   height: 1rem;
@@ -130,7 +130,6 @@ body {
   box-shadow: 0px 10px 0px var(--color-3);
   border-radius: 0rem 0rem 0.5rem 0.5rem;
   transition: 1s;
-  overflow: hidden;
 }
 
 .flip-card.animate:before {
@@ -148,6 +147,7 @@ body {
   animation: flip-top 1s infinite ease-in;
   transform-origin: bottom;
   border-radius: 0.5rem 0.5rem 0rem 0rem;
+  z-index: 5;
 }
 
 .flip-card.animate::after {
@@ -207,8 +207,8 @@ body {
   .top,
   .bottom {
     font-size: 5rem;
-    height: 4.9rem;
-    padding: 2rem;
+    height: 4.4rem;
+    padding: 1.5rem;
     overflow: hidden;
     font-weight: bold;
     background-color: var(--timer-bg-color);
@@ -216,8 +216,8 @@ body {
   .flip-card.animate::after,
   .flip-card.animate::before {
     font-size: 5rem;
-    height: 4.9rem;
-    padding: 2rem;
+    height: 4.4rem;
+    padding: 1.5rem;
   }
 
   body {
@@ -225,6 +225,10 @@ body {
   }
 }
 
+.countdown-parts {
+  position: relative;
+  overflow: hidden;
+}
 .images {
   position: fixed;
   bottom: 4rem;
